# inm5803-ete2022

./: setup.cfg  voxsim_requirements.txt
doc/: conception.md  dev-conventions.md  development.md  references.md
fcg/app/: _app.py  _error_handler.py
fcg/todo_some_package/: todo_some_module.py
fcg/typing/: __init__.py  _typing.py
fcg/voxsim/: default.py
fcg/voxsim/geom/: __init__.py  const.py  default.py  generator.py
fcg/voxsim/geom/params/: __init__.py  bundle.py  cluster.py  default.py  world.py
fcg/voxsim/phantom/: const.py  generator.py
scripts/: generate_config.py
tests/test_fcg/test_todo_some_package/: test_todo_some_module.py
utils/: convert_eol.sh
