[metadata]
name = fiber-config-generator
version = file: _version.txt


[options]
packages = find:


[options.package_data]
fiber-config-generator = py.typed, _version.txt, *.pyi


; pylint options: https://pylint.pycqa.org/en/latest/user_guide/configuration/all-options.html
; pylint sections: https://github.com/PyCQA/pylint/blob/main/pylintrc
[pylint.FORMAT]
max-line-length = 120

[pylint.MESSAGES CONTROL]
disable =
    missing-module-docstring,
    fixme


; flake8 options: https://flake8.pycqa.org/en/latest/user/options.html
; flake8 error codes: https://flake8.pycqa.org/en/latest/user/error-codes.html
; flake8 exhaustive list of rules: https://www.flake8rules.com/
[flake8]
max-line-length = 120
statistics = True
show-source = True
filename =
    scripts/**.py,
    tests/**.py
extend-ignore =
; `whitespace before ':'` is not PEP8 compliant and thus incompatible with black.
    E203
per-file-ignores =
; module imported but unused
    __init__.py: F401


; mypy configuration file: https://mypy.readthedocs.io/en/stable/config_file.html
; mypy error codes enabled by default: https://mypy.readthedocs.io/en/stable/error_code_list.html
; mypy error codes optional checks: https://mypy.readthedocs.io/en/stable/error_code_list2.html
[mypy]
; Disallows defining functions without type annotations or with incomplete type annotations.
disallow_untyped_defs = True

; Prohibit equality checks, identity checks, and container checks between non-overlapping types.
strict_equality = True

; Shows a warning when encountering any code inferred to be unreachable or redundant after performing type analysis.
warn_unreachable = True

enable_error_code =
; Check that expression is not implicitly true in boolean context
    truthy-bool


; pytest API reference: https://docs.pytest.org/en/latest/reference/reference.html
[tool:pytest]
pythonpath = fcg scripts
testpaths = tests


; brunette source: https://github.com/odwyersoftware/brunette
[tool:brunette]
line-length = 120


; isort options: https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"